[tool.poetry]
name = "repl-nix-aimagegen"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "2.3.2"
requests = "^2.32.3"
psycopg2-binary = "^2.9.9"
flask-login = "^0.6.3"
flask-sqlalchemy = "^3.1.1"
flask-session = "0.5.0"
flask-migrate = "^4.0.7"
werkzeug = "^3.0.4"
sqlalchemy = "^2.0.34"
b2sdk = "^2.5.1"
boto3 = "^1.35.13"
botocore = "^1.35.13"
stripe = "^10.10.0"
flask-limiter = "^3.8.0"
websockets = "^13.0.1"
authlib = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"